# workout-tracker

./: .gitlab-ci.yml  README.md  app.cabal  backup.sh  create-image.sh  cron  docker-compose-demo.yaml  docker-compose-prod.yaml  docker-compose.yaml  env.demo  env.local  env.prod  haskell-dockerfile  run-app-demo.sh  run-app.sh  spending-app-dockerfile  todo-app.cabal  wait-for-it.sh  watch-and-rebuild.sh
app/: Main.hs
database/migration/: 20230801043837_add_soft_deletes.sql  20230805171658_add_exercises_and_workouts_tables.sql  20230813193545_exercises_change_weight_to_weight_per_rep.sql  20230912192018_add_note_to_workouts.sql
html/: bulmaNewEntry.html
src/: Webapp.hs
src/Controllers/: Controller.hs  Exercise.hs  Util.hs  Workout.hs
src/Database/: DB.hs  Model.hs  Util.hs
src/Views/: Exercise.hs  Page.hs  Util.hs  Workout.hs
src/database/: Database.hs
src/views/: Views.hs
src/webapp/: Webapp.hs
