cabal-version:       2.4
Name:                workout-tracker
Version:             0.1.0
Homepage:            https://github.com/xddq/workout-tracker
Bug-reports:         https://github.com/xddq/workout-tracker
Category:            Web

library
  exposed-modules:     Webapp
                     , Controllers.Controller, Controllers.Workout, Controllers.Exercise, Controllers.Util
                     , Database.DB, Database.Model, Database.Util
                     , Views.Page, Views.Util, Views.Workout, Views.Exercise
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.16 && < 4.17,
                       base-compat >= 0.12 && < 0.13,
                       postgresql-simple == 0.7.0.0,
                       scotty == 0.12.1,
                       wai == 3.2.3,
                       wai-cors == 0.2.7,
                       wai-extra == 3.1.13.0,
                       wai-middleware-static == 0.9.2,
                       warp == 3.3.28,
                       http-types == 0.12.3,
                       text == 1.2.5.0,
                       aeson == 2.1.2.1,
                       aeson-qq == 0.8.4,
                       bytestring == 0.11.4.0,
                       -- for monad transformers
                       mtl == 2.3.1,
                       transformers == 0.5.6.2,
                       blaze-html == 0.9.1.2,
                       time == 1.12.2,
                       postgresql-simple == 0.7.0.0,

executable app
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  -- base is tied to the underlying ghc version!
  -- src: https://stackoverflow.com/questions/68558825/could-not-resolve-dependencies-while-installing-libraries-with-cabal
  build-depends:       base >= 4.16 && < 4.17,
                       base-compat >= 0.12 && < 0.13,
                       postgresql-simple == 0.7.0.0,
                       warp == 3.3.28,
                       -- reading from .env file
                       dotenv ==  0.11.0.2,
                       -- our webapp
                       webapp,
  GHC-options:         -Wall -threaded
